--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: pip install black flake8 isort
-      - run: black --version
+      # - run: black --version
       - run: isort --version
       - run: flake8 --version
       - run: isort --check .
