--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -17,11 +17,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: pip install black flake8 isort
-      # - run: black --version
+      - run: black --version
       - run: isort --version
       - run: flake8 --version
       - run: isort --check .
-      - run: black --check .
+      # - run: black --check .
       - run: flake8 .
 
   checks:
