--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: pip install black flake8 isort
+      - run: pip install black flake8 isort setuptools
       - run: black --version
       - run: isort --version
       - run: flake8 --version
@@ -80,8 +80,8 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install setuptools wheel twine
         python -m pip install --upgrade pip
+        pip install setuptools wheel twine
     - name: Build and publish
       env:
         TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
