--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -18,7 +18,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: pip install black flake8 isort setuptools
+      - run: pip install black flake8 isort
       - run: black --version
       - run: isort --version
       - run: flake8 --version
