--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -88,4 +88,4 @@ jobs:
         TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
         python setup.py sdist
-        twine upload dist/*
+        twine --verbose upload dist/*
