--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -81,7 +81,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install setuptools wheel twine
+        pip install build twine
     - name: Build and publish
       env:
         TWINE_USERNAME: "__token__"
@@ -89,5 +89,5 @@ jobs:
         #TWINE_USERNAME: ${{ secrets.PYPI_USERNAME }}
         #TWINE_PASSWORD: ${{ secrets.PYPI_PASSWORD }}
       run: |
-        python setup.py sdist
+        python -m build
         twine upload dist/*
